Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.11/guides/kogito.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/kogito.adoc.po
@@ -76,7 +76,7 @@ msgstr "Docker"
 #: upstream/_versions/1.11/guides/kogito.adoc:31
 #, no-wrap
 msgid "Install modelling plugins in your IDE"
-msgstr ""
+msgstr "モデリングプラグインをIDEにインストールする"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/kogito.adoc:34
@@ -91,7 +91,7 @@ msgstr "Eclipse"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/kogito.adoc:39
 msgid "To be able to make use of visual modelling of your processes, download Eclipse IDE and install from Market place Eclipse BPMN2 Modeller plugin (with jBPM Runtime Extension)"
-msgstr ""
+msgstr "プロセスのビジュアルモデリングを利用するには、Eclipse IDEをダウンロードし、マーケットプレイスからEclipse BPMN2 Modellerプラグイン(jBPMランタイムエクステンション付き)をインストールします。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/kogito.adoc:41
@@ -101,7 +101,7 @@ msgstr "VSCode"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/kogito.adoc:43
 msgid "Download and install the VSCode Extension from https://github.com/kiegroup/kogito-tooling/releases[Kogito Tooling release page] to edit and model process definitions from VSCode IDE."
-msgstr ""
+msgstr "link:https://github.com/kiegroup/kogito-tooling/releases[Kogito Toolingのリリースページ] からVSCode Extensionをダウンロードしてインストールすると、VSCode IDEからプロセス定義を編集してモデル化することができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/kogito.adoc:45
@@ -111,7 +111,7 @@ msgstr "Online"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/kogito.adoc:47
 msgid "To avoid any modeler installation you can use directly use https://bpmn.new[BPMN.new] to design and model your process through your favorite web browser."
-msgstr ""
+msgstr "モデラーのインストールを避けるために、 link:https://bpmn.new[BPMN.new] を直接使用して、お気に入りのWebブラウザを使ってプロセスの設計とモデリングを行うことができます。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/kogito.adoc:48
@@ -132,29 +132,29 @@ msgstr "`/persons`"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/kogito.adoc:56
 msgid "This endpoint will be automatically generated based on business process, that in turn will make use of business rules to make certain decisions based on the data being processed."
-msgstr ""
+msgstr "このエンドポイントは、ビジネスプロセスに基づいて自動的に生成され、ひいてはビジネスルールを利用して処理中のデータに基づいて一定の判断を下すことになります。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/kogito.adoc:57
 #, no-wrap
 msgid "Business process"
-msgstr ""
+msgstr "ビジネスプロセス"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/kogito.adoc:62
 msgid "The business process will be responsible for encapsulating business logic of our microservice.  It should provide complete set of steps to achieve a business goal.  At the same time this is the entry point to the service that can be consumed by clients."
-msgstr ""
+msgstr "ビジネスプロセスは、マイクロサービスのビジネスロジックをカプセル化する責任があります。これは、ビジネス目標を達成するためのステップの完全なセットを提供する必要があります。同時に、これはクライアントが消費することができるサービスへの入り口となります。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/kogito.adoc:63
 #, no-wrap
 msgid "Business rule"
-msgstr ""
+msgstr "ビジネスルール"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/kogito.adoc:69
 msgid "A business rule allows to externalise decision logic into reusable pieces that can be easily used in declarative way. There are multiple ways of writing rules like decision tables, decision trees, rules, etc. For this example we focus on the rule format backed by DRL (Drools Rule Language)."
-msgstr ""
+msgstr "ビジネスルールでは、意思決定ロジックを、簡単に使える再利用可能なものに宣言的な方法で外部化することができます。ルールの書き方には、ディシジョンテーブル、ディシジョンツリー、ルールなど複数の書き方があります。この例では、DRL(Drools Rule Language)に裏打ちされたルール形式に焦点を当てています。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/kogito.adoc:70
@@ -176,7 +176,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #. type: Plain text
 #: upstream/_versions/1.11/guides/kogito.adoc:78
 msgid "The solution is located in the `kogito-quickstart` {quickstarts-tree-url}/kogito-quickstart[directory]."
-msgstr ""
+msgstr "ソリューションは `kogito-quickstart` {quickstarts-tree-url}/kogito-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/kogito.adoc:79
@@ -204,12 +204,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/kogito.adoc:96
 msgid "This command generates a Maven project, importing the `kogito` extension that comes with all needed dependencies and configuration to equip your application with business automation."
-msgstr ""
+msgstr "このコマンドは、アプリケーションにビジネスオートメーションを装備するために必要なすべての依存関係と設定を含む `kogito` エクステンションをインポートして、Maven プロジェクトを生成します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/kogito.adoc:99
 msgid "If you already have your Quarkus project configured, you can add the `kogito` extension to your project by running the following command in your project base directory:"
-msgstr ""
+msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリーで以下のコマンドを実行することで、プロジェクトに `kogito` エクステンションを追加することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/kogito.adoc:103
@@ -241,7 +241,7 @@ msgstr "アプリケーションの記述"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/kogito.adoc:118
 msgid "Let's start by implementing the simple data object `Person`. As you can see from the source code below it is just a POJO:"
-msgstr ""
+msgstr "まずはシンプルなデータオブジェクト `Person` を実装してみましょう。下のソースコードを見ればわかるように、ただのPOJOです。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/kogito.adoc:122
@@ -719,23 +719,23 @@ msgstr ""
 #: upstream/_versions/1.11/guides/kogito.adoc:342
 #, no-wrap
 msgid "Enabling persistence"
-msgstr ""
+msgstr "永続化を有効にする"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/kogito.adoc:347
 msgid "Since 0.3.0 of Kogito, there is an option to enable persistence to preserve process instance state across application restarts. That supports long running process instances that can be resumed at any point in time."
-msgstr ""
+msgstr "Kogito の 0.3.0 以降、アプリケーションの再起動時にプロセスインスタンスの状態を保持するために永続性を有効にするオプションがあります。これにより、いつでも再開できる長時間稼働しているプロセスインスタンスをサポートします。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/kogito.adoc:352
 msgid "Kogito uses Infinispan as the persistence service so you need to have Infinispan server installed and running.  Version of the Infinispan is aligned with Quarkus BOM so make sure the right version is installed."
-msgstr ""
+msgstr "Kogitoでは、永続化サービスとしてInfinispanを使用しているため、Infinispanサーバーがインストールされている必要があります。InfinispanのバージョンはQuarkusのBOMに合わせているので、正しいバージョンがインストールされていることを確認してください。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/kogito.adoc:353
 #, no-wrap
 msgid "Add dependencies to project"
-msgstr ""
+msgstr "プロジェクトに依存関係を追加する"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/kogito.adoc:366
@@ -761,7 +761,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/kogito.adoc:371
 msgid "Add following into the src/main/resources/application.properties file (create the file if it does not exist)"
-msgstr ""
+msgstr "src/main/resources/application.propertiesファイルに以下を追加します(存在しない場合は作成してください)。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/kogito.adoc:375
@@ -772,23 +772,23 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/kogito.adoc:378
 msgid "Adjust the host and port number according to your Infinispan server installation."
-msgstr ""
+msgstr "Infinispan サーバーのインストールに合わせて、ホストとポート番号を調整します。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/kogito.adoc:379
 #, no-wrap
 msgid "Test with enabled persistence"
-msgstr ""
+msgstr "永続性を有効にしたテスト"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/kogito.adoc:383
 msgid "After configuring persistence on the project level, you can test and verify that the process instance state is preserved across application restarts."
-msgstr ""
+msgstr "プロジェクト レベルで永続性を設定した後、アプリケーションの再起動時にプロセス インスタンスの状態が保持されているかどうかをテストして確認できます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/kogito.adoc:385
 msgid "start Infinispan server"
-msgstr ""
+msgstr "Infinispan サーバーを起動する"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/kogito.adoc:386
@@ -803,33 +803,33 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/kogito.adoc:397
 msgid "You can also verify that there is active instance"
-msgstr ""
+msgstr "アクティブなインスタンスがあることを確認することもできます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/kogito.adoc:406
 msgid "Restart your application while keeping Infinispan server up and running."
-msgstr ""
+msgstr "Infinispan サーバーを稼働させている間にアプリケーションを再起動します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/kogito.adoc:408
 msgid "Check if you can see active instance which should have exactly the same id"
-msgstr ""
+msgstr "全く同じ ID を持つアクティブなインスタンスが表示されているかどうかを確認します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/kogito.adoc:418
 msgid "To learn more about persistence in Kogito visit https://github.com/kiegroup/kogito-runtimes/wiki/Persistence[this page]"
-msgstr ""
+msgstr "Kogito の永続化について詳しく知りたい方は link:https://github.com/kiegroup/kogito-runtimes/wiki/Persistence[こちらのページ] をご覧ください。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/kogito.adoc:419
 #, no-wrap
 msgid "Using decision tables"
-msgstr ""
+msgstr "意思決定テーブルの使用"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/kogito.adoc:423
 msgid "Kogito allows to define business rules as decision tables using the Microsoft Excel file formats.  To be able to use such assets in your application, an additional dependency is required:"
-msgstr ""
+msgstr "Kogitoでは、Microsoft Excelファイルフォーマットを使用して、ビジネスルールをディシジョンテーブルとして定義することができます。このようなアセットをアプリケーションで使用するには、追加の依存関係が必要です。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/kogito.adoc:430
@@ -844,7 +844,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/kogito.adoc:433
 msgid "Once the dependency is added to the project, decision tables in `xls` or `xlsx` format can be properly handled."
-msgstr ""
+msgstr "依存関係がプロジェクトに追加されると、 `xls` や `xlsx` 形式のディシジョンテーブルを適切に扱うことができます。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/kogito.adoc:434
@@ -855,9 +855,9 @@ msgstr "参照"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/kogito.adoc:437
 msgid "https://kogito.kie.org[Kogito Website]"
-msgstr ""
+msgstr "https://kogito.kie.org[Kogito Website]"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/kogito.adoc:437
 msgid "https://docs.jboss.org/kogito/release/latest/html_single[Kogito Documentation]"
-msgstr ""
+msgstr "https://docs.jboss.org/kogito/release/latest/html_single[Kogito Documentation]"
