--- a/l10n/stats/translation.csv
+++ b/l10n/stats/translation.csv
@@ -1,4 +1,5 @@
 Filename, Fuzzy Messages, Total Messages, Fuzzy Words, Total Words, Achievement
+l10n/po/ja_JP/_posts/2021-04-20-solving-problems-with-custom-extensions.adoc.po, 0, 67, 0, 1185 ,100%
 l10n/po/ja_JP/_posts/2021-04-14-quarkus-1-13-2-final-released.adoc.po, 0, 22, 0, 255 ,100%
 l10n/po/ja_JP/_posts/2021-04-07-quarkus-1-13-1-final-released.adoc.po, 0, 19, 0, 266 ,100%
 l10n/po/ja_JP/_posts/2021-03-15-micrometer-prometheus-openshift.adoc.po, 0, 57, 0, 858 ,100%
