--- a/l10n/po/ja_JP/_posts/2021-04-15-gui-react-patternfly.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-04-15-gui-react-patternfly.adoc.po
@@ -61,7 +61,7 @@ msgstr "このアプローチには、独立したコンテナのスケーリン
 #. type: Plain text
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:18
 msgid "Perhaps you just want to create a small self-contained CRUD application without compromising in modern web GUI technologies? We have seen how to achieve this with https://quarkus.io/blog/quarkus-and-web-ui-development-mode/[Angular] but what about React which at least according to GitHub stars has surpassed Angular in terms of popularity? It is all about choice and I will show you how you can not only integrate React but also use a web component framework called https://www.patternfly.org/[Patternfly].  Patternfly is a collection of patterns, components and styles for creating rich, consistent and interactive GUIs."
-msgstr "最新のWeb GUI技術に妥協することなく、自己完結型の小さなCRUDアプリケーションを作りたいと思っているのではないでしょうか？ link:https://quarkus.io/blog/quarkus-and-web-ui-development-mode/[Angular]でこれを実現する方法を見てきましたが、少なくともGitHubの星の数によれば、人気の点でAngularを上回っているReactはどうでしょうか？今回は、Reactを統合するだけでなく、 link:https://www.patternfly.org/[Patternfly]と呼ばれるWebコンポーネントフレームワークを使用する方法を紹介します。Patternflyは、リッチで一貫性のあるインタラクティブなGUIを作成するためのパターン、コンポーネント、スタイルを集めたものです。"
+msgstr "最新のWeb GUI技術に妥協することなく、自己完結型の小さなCRUDアプリケーションを作りたいと思っているのではないでしょうか？ link:https://quarkus.io/blog/quarkus-and-web-ui-development-mode/[Angular]でこれを実現する方法を見てきましたが、少なくともGitHubの星の数において、人気の点でAngularを上回っているReactはどうでしょうか？今回は、Reactを統合するだけでなく、 link:https://www.patternfly.org/[Patternfly]と呼ばれるWebコンポーネントフレームワークを使用する方法を紹介します。Patternflyは、リッチで一貫性のあるインタラクティブなGUIを作成するためのパターン、コンポーネント、スタイルを集めたものです。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:20
