--- a/l10n/po/ja_JP/_guides/funqy-gcp-functions-http.adoc.po
+++ b/l10n/po/ja_JP/_guides/funqy-gcp-functions-http.adoc.po
@@ -21,62 +21,56 @@ msgstr ""
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/funqy-gcp-functions-http.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus - Funqy HTTP Binding with Google Cloud Functions"
-msgstr "Quarkus - Google Cloud機能を使用したFunqy HTTPバインディング"
+msgstr "Quarkus - Google Cloud 機能を使用した Funqy HTTP バインディング"
 
 #. type: Plain text
 #: upstream/_guides/funqy-gcp-functions-http.adoc:14
-#, fuzzy
 msgid "If you want to allow HTTP clients to invoke your Funqy functions on Google Cloud Functions, Quarkus allows you to expose multiple Funqy functions through HTTP deployed as one Google Cloud Function.  This approach does add overhead over the regular Funqy Google Cloud Function integration."
-msgstr "HTTPクライアントがGoogle Cloud Function上でFunqy関数を呼び出すことができるようにしたい場合、Quarkusでは、1つのGoogle Cloud FunctionとしてデプロイされたHTTPを通じて複数のFunqy関数を公開することができます。このアプローチは、通常のFunqy Google Cloud Functionの統合よりもオーバーヘッドが増加します。"
+msgstr "HTTP クライアントが Google Cloud Function 上で Funqy 関数を呼び出すことができるようにする場合、Quarkus では、1 つの Google Cloud Function としてデプロイされた HTTP を通じて複数の Funqy 関数を公開することができます。なお、このアプローチは、通常の Funqy Google Cloud Function の統合よりもオーバーヘッドが増加します。"
 
 #. type: Plain text
 #: upstream/_guides/funqy-gcp-functions-http.adoc:19
-#, fuzzy
 msgid "Follow the link:gcp-functions-http[Google Cloud Functions Http Guide].  It walks through using a variety of HTTP frameworks on Google Cloud Functions, including Funqy."
-msgstr "link:gcp-functions-http[Google Cloud Functions Http Guide] に従います。それは、Funqyを含むGoogle Cloud Functions上のさまざまなHTTPフレームワークの使用を説明しています。"
+msgstr "link:gcp-functions-http[Google Cloud Functions Http Guide] に従ってください。これは、Google Cloud Functions 上で、Funqy を含むさまざまな HTTP フレームワークを使用する方法を説明しています。"
 
 #. type: Plain text
 #: upstream/_guides/funqy-gcp-functions-http.adoc:25
-#, fuzzy
 msgid "The Funqy HTTP + Google Cloud Functions binding is not a replacement for REST over HTTP.  Because Funqy needs to be portable across a lot of different protocols and function providers its HTTP binding is very minimalistic and you will lose REST features like linking and the ability to leverage HTTP features like cache-control and conditional GETs.  You may want to consider using Quarkus's JAX-RS, Spring MVC, or Vert.x Web Reactive Route link:gcp-functions-http[support] instead.  They also work with Quarkus and Google Cloud Functions."
-msgstr "Funqy HTTP + Google Cloud FunctionsバインディングはHTTP上のRESTの代替ではありません。Funqyは多くの異なるプロトコルや関数プロバイダに移植する必要があるため、HTTPバインディングは非常にミニマムであり、リンクのようなREST機能やキャッシュコントロールや条件付きGETのようなHTTP機能を利用する機能を失うことになります。代わりに、QuarkusのJAX-RS、Spring MVC、またはVert.x Web Reactive Routeの link:gcp-functions-http[サポートを] 使用することを検討するとよいでしょう。また、QuarkusやGoogle Cloud Functionsとも連携しています。"
+msgstr "Funqy HTTP + Google Cloud Functions バインディングは HTTP 上の REST の代わりではありません。Funqy は多くの異なるプロトコルや関数プロバイダーを横断してポータブルである必要があるため、HTTP バインディングは非常にミニマムであり、リンクのような REST 機能やキャッシュコントロールや条件付きGETのような HTTP 機能を活用する機能を失うことになります。代わりに、Quarkus の JAX-RS、Spring MVC、または Vert.x Web Reactive Route の link:gcp-functions-http[サポート] を使用することを検討するとよいでしょう。また、Quarkus や Google Cloud Functions とも連携しています。"
 
 #. type: Title ==
 #: upstream/_guides/funqy-gcp-functions-http.adoc:26
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "An additional Quickstart"
 msgstr "追加のクイックスタート"
 
 #. type: Plain text
 #: upstream/_guides/funqy-gcp-functions-http.adoc:30
-#, fuzzy
 msgid "Beyond generating a Google Cloud Functions project that is covered in the link:gcp-functions-http[Google Cloud Functions HTTP Guide], there's also a quickstart for running Funqy HTTP on Google Cloud Functions."
-msgstr "Google Cloud Functions link:gcp-functions-http[HTTP ガイド] で紹介されている Google Cloud Functions プロジェクトを生成するだけでなく、Google Cloud Functions 上で Funqy HTTP を実行するためのクイックスタートもあります。"
+msgstr "Google Cloud Functions link:gcp-functions-http[HTTP ガイド] で紹介されている Google Cloud Functions プロジェクトを生成するものだけでなく、Google Cloud Functions 上で Funqy HTTP を実行するためのクイックスタートもあります。"
 
 #. type: Plain text
 #: upstream/_guides/funqy-gcp-functions-http.adoc:32
 msgid "Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive]."
-msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone-url}` 、 {quickstarts-archive-url}[アーカイブ] をダウンロードします。"
+msgstr "Git レポジトリをクローン (`git clone {quickstarts-clone-url}`) するか、 {quickstarts-archive-url}[アーカイブ] をダウンロードします。"
 
 #. type: Plain text
 #: upstream/_guides/funqy-gcp-functions-http.adoc:34
-#, fuzzy
 msgid "The solution is located in the `funqy-google-cloud-functions-http-quickstart` {quickstarts-tree-url}/funqy-quickstarts/funqy-google-cloud-functions-http-quickstart[directory]."
-msgstr "ソリューションは `funqy-google-cloud-functions-http-quickstart` {quickstarts-tree-url}/funqy-quickstarts/funqy-google-cloud-functions-http-quickstart[ディレクトリ] にあります。"
+msgstr "このソリューションは `funqy-google-cloud-functions-http-quickstart` {quickstarts-tree-url}/funqy-quickstarts/funqy-google-cloud-functions-http-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/funqy-gcp-functions-http.adoc:35
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "The Code"
 msgstr "コード"
 
 #. type: Plain text
 #: upstream/_guides/funqy-gcp-functions-http.adoc:39
-#, fuzzy
 msgid "There is nothing special about the code and more importantly nothing Google Cloud specific.  Funqy functions can be deployed to many different environments and Google Cloud Functions is one of them.  The Java code is actually the same exact code as the {quickstarts-tree-url}/funqy-quickstarts/funqy-http-quickstart[funqy-http-quickstart]."
-msgstr "コードには何も特別なものはありませんし、もっと重要なのはGoogle Cloudに特化したものは何もありません。Funqy関数は多くの異なる環境にデプロイすることができ、Google Cloud Functionsもその一つです。Javaのコードは、実は{quickstarts-tree-url}/funqy-quickstarts/funqy-http-quickstart[funqy-http-quickstart]と全く同じコードです。"
+msgstr "コードには何も特別なものはありませんし、もっと重要なのは Google Cloud に特化したものは何もありません。Funqy 関数はさまざまな環境にデプロイすることができ、Google Cloud Functions もその一つです。Java のコードは、実は {quickstarts-tree-url}/funqy-quickstarts/funqy-http-quickstart[funqy-http-quickstart]と  全く同じコードです。"
 
 #. type: Title ==
 #: upstream/_guides/funqy-gcp-functions-http.adoc:40
@@ -86,9 +80,8 @@ msgstr "はじめに"
 
 #. type: Plain text
 #: upstream/_guides/funqy-gcp-functions-http.adoc:44
-#, fuzzy
 msgid "The steps to get this quickstart running are exactly the same as defined in the link:gcp-functions-http[Google Cloud Functions HTTP Guide].  This differences are that you are running from a quickstart and the Maven dependencies are slightly different."
-msgstr "このクイックスタートを実行するための手順は、『 link:gcp-functions-http[Google Cloud Functions HTTP Guide] 』で定義されているものと全く同じです。この違いは、クイックスタートから実行していることと、Mavenの依存関係が若干異なることです。"
+msgstr "このクイックスタートを実行するための手順は、link:gcp-functions-http[Google Cloud Functions HTTP Guide] で定義されているものと全く同じです。この違いは、クイックスタートから実行していることと、Maven の依存関係が若干異なることです。"
 
 #. type: delimited block -
 #: upstream/_guides/funqy-gcp-functions-http.adoc:55
@@ -103,3 +96,11 @@ msgid ""
 "            <artifactId>quarkus-google-cloud-functions-http</artifactId>\n"
 "        </dependency>\n"
 msgstr ""
+"        <dependency>\n"
+"            <groupId>io.quarkus</groupId>\n"
+"            <artifactId>quarkus-funqy-http</artifactId>\n"
+"        </dependency>\n"
+"        <dependency>\n"
+"            <groupId>io.quarkus</groupId>\n"
+"            <artifactId>quarkus-google-cloud-functions-http</artifactId>\n"
+"        </dependency>\n"
