Add some translations

--- a/l10n/po/ja_JP/_guides/security-customization.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-customization.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-04-07 19:11+0000\n"
-"PO-Revision-Date: 2021-03-09 23:10+0900\n"
+"PO-Revision-Date: 2021-04-21 15:04+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -27,22 +27,20 @@ msgstr "Quarkus - セキュリティーのヒントとコツ"
 
 #. type: Title ==
 #: upstream/_guides/security-customization.adoc:10
-#, fuzzy, no-wrap
+#, no-wrap
 #| msgid "Quarkus - Security Tips and Tricks"
 msgid "Quarkus Security Dependency"
-msgstr "Quarkus - セキュリティーのヒントとコツ"
+msgstr "Quarkus Security依存関係"
 
 #. type: Plain text
 #: upstream/_guides/security-customization.adoc:13
-#, fuzzy
 msgid "`io.quarkus:quarkus-security` module contains the core Quarkus security classes."
 msgstr "`io.quarkus:quarkus-security` モジュールには、Quarkusの中核となるセキュリティクラスが含まれています。"
 
 #. type: Plain text
 #: upstream/_guides/security-customization.adoc:16
-#, fuzzy
 msgid "In most cases it does not have to be added directly to your project's `pom.xml` as it is already provided by all of the security extensions.  However if you need to write your own custom security code (for example, register a <<jaxrs-security-context, Custom JAX-RS SecurityContext>>) or use <<bouncy-castle, BouncyCastle>> libraries, then please make sure it is included:"
-msgstr "ほとんどの場合、すべてのセキュリティ拡張機能によってすでに提供されているので、プロジェクトの `pom.xml` に直接追加する必要はありません。しかし、独自のカスタムセキュリティコードを書く必要がある場合（例えば、 link:#jaxrs-security-context[カスタムJAX-RS SecurityContext]の登録など）や、 link:#bouncy-castle[BouncyCastle]ライブラリを使用する場合は、必ず追加してください。"
+msgstr "ほとんどの場合、すべてのセキュリティエクステンションによってすでに追加されているので、プロジェクトの `pom.xml` に直接追加する必要はありません。しかし、独自のカスタムセキュリティコードを書く必要がある場合（例えば、 link:#jaxrs-security-context[カスタムJAX-RS SecurityContext]の登録など）や、 link:#bouncy-castle[BouncyCastle]ライブラリを使用する場合は、必ず追加してください。"
 
 #. type: delimited block -
 #: upstream/_guides/security-customization.adoc:23
