--- a/l10n/po/ja_JP/_guides/hibernate-orm-panache-kotlin.adoc.po
+++ b/l10n/po/ja_JP/_guides/hibernate-orm-panache-kotlin.adoc.po
@@ -3,43 +3,41 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-03-30 14:04+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-04-21 20:40+0900\n"
+"Language: om\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus - Simplified Hibernate ORM with Panache and Kotlin"
 msgstr "Quarkus - PanacheとKotlinによるシンプルなHibernate ORM"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:15
-#, fuzzy
 msgid "Hibernate ORM is the de facto standard JPA implementation and is well-known in the Java ecosystem.  Panache offers a new layer atop this familiar framework.  This guide will not dive in to the specifics of either as those are already covered in the link:hibernate-orm-panache[Panache guide].  In this guide, we'll cover the Kotlin specific changes needed to use Panache in your Kotlin-based Quarkus applications."
-msgstr "Hibernate ORMは事実上の標準的なJPA実装であり、Javaエコシステムではよく知られています。Panacheはこのお馴染みのフレームワークの上に新しいレイヤーを提供します。このガイドでは、これらの詳細についてはPanacheの link:hibernate-orm-panache[ガイド] ですでに説明しているので、このガイドでは触れません。このガイドでは、KotlinベースのQuarkusアプリケーションでPanacheを使用するために必要なKotlin固有の変更点について説明します。"
+msgstr "Hibernate ORMはデファクトスタンダードなJPA実装であり、Javaエコシステムではよく知られています。Panacheはこのお馴染みのフレームワークの上に新しいレイヤーを提供します。これらの詳細については link:hibernate-orm-panache[Panacheのガイド] ですでに説明しているので、このガイドでは触れません。このガイドでは、KotlinベースのQuarkusアプリケーションでPanacheを使用するために必要なKotlin固有の変更点について説明します。"
 
 #. type: Title ==
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:16
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "First: an example"
-msgstr "最初に:一例"
+msgstr "最初に:例"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:21
-#, fuzzy
 msgid "As we saw in the Panache guide, Panache allows us to extend the functionality in our entities and repositories (also known as DAOs) with some automatically provided functionality.  When using Kotlin, the approach is very similar to what we see in the Java version with a slight change or two.  To Panache-enable your entity, you would define it something like:"
 msgstr "Panacheガイドで見たように、Panacheを使うと、エンティティーやリポジトリ(DAOとも呼ばれます)の機能を自動で提供される機能で拡張することができます。Kotlin を使用する場合のアプローチは Java 版と非常によく似ていますが、若干の変更点があります。エンティティーを Panache で有効にするには、次のように定義します。"
 
@@ -57,7 +55,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:35
-#, fuzzy
 msgid "As you can see our entities remain simple.  There is, however, a slight difference from the Java version.  The Kotlin language doesn't support the notion of static methods in quite the same way as Java does.  Instead, we must use a https://kotlinlang.org/docs/tutorials/kotlin-for-py/objects-and-companion-objects.html#companion-objects[companion object]:"
 msgstr "ご覧のように、私たちのエンティティーはシンプルなままです。しかし、Java版とは少し違いがあります。Kotlin 言語は Java のように静的メソッドの概念をサポートしていません。その代わり、 link:https://kotlinlang.org/docs/tutorials/kotlin-for-py/objects-and-companion-objects.html#companion-objects[コンパニオンオブジェクト] を使わなければなりません。"
 
@@ -86,43 +83,38 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:53
-#, fuzzy
 msgid "The companion object holds all the methods not related to a specific instance allowing for general management and querying bound to a specific type."
 msgstr "コンパニオンオブジェクトは、特定のインスタンスに関連しないすべてのメソッドを保持し、特定の型にバインドされた一般的な管理とクエリを可能にします。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:56
-#, fuzzy
 msgid "Here there are options, but we've chosen the `lateinit` approach.  This allows us to declare these fields as non-null knowing they will be properly assigned either by the constructor (not shown) or by hibernate loading data from the database."
-msgstr "ここにはオプションがありますが、ここでは `lateinit` のアプローチを選択しました。これにより、これらのフィールドはコンストラクタ(表示されていません)やハイバネートがデータベースからデータをロードすることで適切に代入されることがわかっているので、これらのフィールドを非 null として宣言することができます。"
+msgstr "幾つか選択肢がありますが、ここでは `lateinit` のアプローチを選択しました。これにより、コンストラクタ(表示されていません)やHibernateがデータベースからデータをロードすることで適切に代入されることがわかっているので、これらのフィールドを非 null として宣言することができます。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:60
-#, fuzzy
 msgid "These types differ from the Java types mentioned in those tutorials.  For Kotlin support, all the Panache types will be found in the `io.quarkus.hibernate.orm.panache.kotlin` package.  This subpackage allows for the distinction between the Java and Kotlin variants and allows for both to be used unambiguously in a single project."
-msgstr "これらのタイプは、それらのチュートリアルで言及されている Java のタイプとは異なります。Kotlin のサポートのために、すべての Panache の型は `io.quarkus.hibernate.orm.panache.kotlin` パッケージにあります。このサブパッケージは、Java と Kotlin の違いを区別し、単一のプロジェクトで両方を明確に使用することを可能にします。"
+msgstr "これらの型は、それらのチュートリアルで言及されている Java のタイプとは異なります。Kotlin のサポートのために、すべての Panache の型は `io.quarkus.hibernate.orm.panache.kotlin` パッケージにあります。このサブパッケージは、Java と Kotlin の違いを区別し、単一のプロジェクトで両方を明確に使用することを可能にします。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:64
-#, fuzzy
 msgid "In the Kotlin version, we've simply moved the bulk of the link:https://www.martinfowler.com/eaaCatalog/activeRecord.html[`active record pattern`] functionality to the `companion object`.  Apart from this slight change, we can then work with our types in ways that map easily from the Java side of world."
-msgstr "Kotlin版では、単純に link:https://www.martinfowler.com/eaaCatalog/activeRecord.html[`active record pattern`] の機能を `companion object` に追加しました。このわずかな変更とは別に、私たちは、世界のJava側から簡単にマップする方法で私たちの型を使用して作業することができます。"
+msgstr "Kotlin版では、単純に link:https://www.martinfowler.com/eaaCatalog/activeRecord.html[`active record pattern`] の機能を `companion object` に追加しました。このわずかな変更を別にすれば、私たちは、世界のJava側から簡単にマップする方法で私たちの型を使用して作業することができます。"
 
 #. type: Title ==
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:66
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Using the repository pattern"
 msgstr "リポジトリパターンの使用"
 
 #. type: Title ===
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:69
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Defining your entity"
-msgstr "実体の定義"
+msgstr "エンティティの定義"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:72
-#, fuzzy
 msgid "When using the repository pattern, you can define your entities as regular JPA entities."
 msgstr "リポジトリパターンを使用する場合、エンティティーを通常のJPAエンティティーとして定義することができます。"
 
@@ -143,15 +135,14 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:85
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Defining your repository"
 msgstr "リポジトリの定義"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:89
-#, fuzzy
 msgid "When using Repositories, you get the exact same convenient methods as with the active record pattern, injected in your Repository, by making them implement `PanacheRepository`:"
-msgstr "リポジトリを使用する場合、アクティブレコードパターンをリポジトリに注入した場合と全く同じ便利なメソッドを得ることができます。 `PanacheRepository` ."
+msgstr "リポジトリを使用する場合、`PanacheRepository` を実装することでアクティブレコードパターンをリポジトリに注入した場合と全く同じ便利なメソッドを得ることができます。"
 
 #. type: delimited block -
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:98
@@ -167,7 +158,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:102
-#, fuzzy
 msgid "All the operations that are defined on `PanacheEntityBase` are available on your repository, so using it is exactly the same as using the active record pattern, except you need to inject it:"
 msgstr "`PanacheEntityBase` で定義されている操作はすべてリポジトリ上で利用可能なので、これを使用することはアクティブレコードパターンを使用するのと全く同じですが、それを注入する必要があります。"
 
@@ -189,15 +179,14 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:112
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Most useful operations"
 msgstr "最も便利な操作"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:115
-#, fuzzy
 msgid "Once you have written your repository, here are the most common operations you will be able to perform:"
-msgstr "リポジトリを書いたら、ここでは最も一般的な操作を紹介します。"
+msgstr "リポジトリを書くことで実行可能な最も一般的な操作は以下の通りです。"
 
 #. type: delimited block -
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:123
@@ -311,9 +300,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:166
-#, fuzzy
 msgid "All `list` methods have equivalent `stream` versions."
-msgstr "`list` の方法は、すべて同等の `stream` のバージョンを持っています。"
+msgstr "すべての `list` メソッドは、同等の `stream` バージョンがあります。"
 
 #. type: delimited block -
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:173
@@ -327,31 +315,27 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:176
-#, fuzzy
 msgid "The `stream` methods require a transaction to work."
 msgstr "`stream` メソッドが動作するにはトランザクションが必要です。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:180
-#, fuzzy
 msgid "The rest of the documentation show usages based on the active record pattern only, but keep in mind that they can be performed with the repository pattern as well.  The repository pattern examples have been omitted for brevity."
 msgstr "残りのドキュメントでは、アクティブレコードパターンに基づく使用法のみを示していますが、リポジトリパターンでも実行できることを覚えておいてください。リポジトリパターンの例は簡潔にするために省略しています。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:185
-#, fuzzy
 msgid "For more examples, please consult the link:hibernate-orm-panache[Java version] for complete details.  Both APIs are the same and work identically except for some Kotlin-specific tweaks to make things feel more natural to Kotlin developers.  These tweaks include things like better use of nullability and the lack of `Optional` on API methods."
 msgstr "より多くの例については、 link:hibernate-orm-panache[Java 版] を参照してください。どちらの API も同じで、Kotlin 開発者がより自然に感じられるように Kotlin 固有の調整が行われている点を除いては同じように動作します。これらの調整には、nullability の使用方法の改善や、API メソッドの `Optional` がないことなどが含まれます。"
 
 #. type: Title ==
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:186
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Setting up and configuring Hibernate ORM with Panache"
-msgstr "Panacheを使ったHibernate ORMの設定と設定"
+msgstr "Hibernate ORM with Panacheのセットアップと設定"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:191
-#, fuzzy
 msgid "To get started using Panache with Kotlin, you can, generally, follow the steps laid out in the Java tutorial.  The biggest change to configuring your project is the Quarkus artifact to include.  You can, of course, keep the Java version if you need but if all you need are the Kotlin APIs then include the following dependency instead:"
 msgstr "KotlinでPanacheを使い始めるには、一般的には、Javaチュートリアルで説明されている手順に従います。プロジェクトを設定する上で最も大きな変更点は、インクルードするQuarkusのアーティファクトです。もちろん、必要であればJavaバージョンのままでも構いませんが、KotlinのAPIだけが必要な場合は、代わりに以下の依存関係をインクルードしてください。"
 
@@ -370,6 +354,5 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:203
-#, fuzzy
 msgid "Note the addition of `-kotlin` on the end.  Generally you'll only need this version but if your project will be using both Java and Kotlin code, you can safely include both artifacts."
 msgstr "最後に `-kotlin` が追加されていることに注意してください。一般的にはこのバージョンだけが必要ですが、もしあなたのプロジェクトがJavaとKotlinの両方のコードを使うのであれば、両方の成果物を安全に含めることができます。"
