Apply translation memory

--- a/l10n/po/ja_JP/_guides/mailer.adoc.po
+++ b/l10n/po/ja_JP/_guides/mailer.adoc.po
@@ -802,7 +802,7 @@ msgstr "まとめ"
 #. type: delimited block -
 #: upstream/_guides/mailer.adoc:428
 msgid "This guide has shown how you can send emails from a Quarkus application.  The _mailer_ extension works in JVM and native mode."
-msgstr ""
+msgstr "このガイドでは、Quarkusアプリケーションからメールを送信する方法を紹介しました。 _mailer_ エクステンションは、JVMとネイティブモードで動作します。"
 
 #. type: delimited block -
 #: upstream/_guides/mailer.adoc:431
