--- a/l10n/po/ja_JP/_versions/1.11/guides/reactive-messaging-http.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/reactive-messaging-http.adoc.po
@@ -303,7 +303,7 @@ msgstr "HTTP コネクタを設定する必要があります。これは `appli
 #. type: Plain text
 #: upstream/_versions/1.11/guides/reactive-messaging-http.adoc:147
 msgid "`mp.messaging.[outgoing|incoming].{channel-name}.{property}=value`"
-msgstr ""
+msgstr "`mp.messaging.[outgoing|incoming].{channel-name}.{property}=value`"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/reactive-messaging-http.adoc:149
