--- a/l10n/po/ja_JP/_versions/1.7/guides/mailer.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/mailer.adoc.po
@@ -297,7 +297,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/mailer.adoc:166
 msgid "With such a JAX-RS resource, you can check that everything is working with:"
-msgstr ""
+msgstr "このようなJAX-RSリソースがあれば、すべてが動作していることを確認することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/mailer.adoc:171
@@ -310,7 +310,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/mailer.adoc:176
 msgid "You can create new `io.quarkus.mailer.Mail` instances from the constructor or from the `Mail.withText` and `Mail.withHtml` helper methods. The `Mail` instance lets you add recipients (to, cc, or bcc), set the subject, headers, sender (from) address..."
-msgstr ""
+msgstr "コンストラクタ、または `Mail.withText` と `Mail.withHtml` ヘルパーメソッドから、新しい `io.quarkus.mailer.Mail` インスタンスを作成できます。 `Mail` インスタンスでは、受信者 (to, cc, bcc) の追加、件名、ヘッダ、送信者 (from) アドレスの設定などを行うことができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/mailer.adoc:178
@@ -363,7 +363,7 @@ msgstr "インラインの添付ファイル付きのHTMLメールの送信"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/mailer.adoc:207
 msgid "When sending HTML email, you can add inlined attachments.  For example, you can send an image with your email, and this image will be displayed in the mail content. If you put the image file into resources folder, you should specify the full path to the file. \"e.g.\" \"META-INF/resources/quarkus-logo.png\" otherwise quarkus will lookup in the root folder of the project"
-msgstr ""
+msgstr "HTMLメールを送信する際に、インラインの添付ファイルを追加することができます。例えば、メールに画像を添付して送信すると、この画像がメールの内容に表示されます。画像ファイルをリソースフォルダーに入れる場合は、ファイルのフルパスを指定する必要があります。\"例\" \"META-INF/resources/quarkus-logo.png\" 層ではない場合は、quarkusはプロジェクトのルートフォルダーを検索します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/mailer.adoc:222
@@ -386,7 +386,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/mailer.adoc:228
 msgid "Note the _content-id_ format and reference.  By spec, when you create the inline attachment, the content-id must be structured as follows: `<id@domain>`.  If you don't wrap your content-id between `<>`, it is automatically wrapped for you.  When you want to reference your attachment, for instance in the `src` attribute, use `cid:id@domain` (without the `<` and `>`)."
-msgstr ""
+msgstr "_content-id の_ 形式と参照に注意してください。仕様上、インライン添付ファイルを作成する際には、content-idは以下のように構成する必要があります。 `<id@domain>` . `<>` の間に content-id を挟まない場合は、自動的にラップされます。添付ファイルを参照したい場合、例えば `src` 属性で参照したい場合は `cid:id@domain` を使用してください( `<` と `>` は使用しないでください)。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/mailer.adoc:229
@@ -653,7 +653,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/mailer.adoc:378
 #, no-wrap
 msgid "Using the underlying Vert.x Mail Client"
-msgstr ""
+msgstr "基盤となる Vert.x メールクライアントの使用"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/mailer.adoc:382
@@ -709,7 +709,7 @@ msgstr "まとめ"
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/mailer.adoc:404
 msgid "This guide has shown how you can send emails from a Quarkus application.  The _mailer_ extension works in JVM and native mode."
-msgstr ""
+msgstr "このガイドでは、Quarkusアプリケーションからメールを送信する方法を紹介しました。 _mailer_ エクステンションは、JVMとネイティブモードで動作します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/mailer.adoc:407
