--- a/l10n/po/ja_JP/_versions/1.11/guides/redis.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/redis.adoc.po
@@ -755,7 +755,7 @@ msgstr "アプリケーションとの相互作用"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:405
 msgid "As we have seen above, the API exposes five Rest endpoints.  In this section we are going to see how to initialise an increment, see the list of current increments, incrementing a value given its key, retrieving the current value of an increment, and finally deleting a key."
-msgstr ""
+msgstr "上で見たように、APIは5つのRestエンドポイントを公開しています。このセクションでは、インクリメントを初期化する方法、現在のインクリメントのリストを見る方法、キーを指定して値をインクリメントする方法、インクリメントの現在の値を取得する方法、そして最後にキーを削除する方法を見ていきます。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/redis.adoc:406
@@ -772,7 +772,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:414
 msgid "We create the first increment, with the key `first` and an initial value of `10`."
-msgstr ""
+msgstr "最初のインクリメントを作成し、キーは `first` 、初期値は `10` ."
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:416
@@ -838,7 +838,7 @@ msgstr "このコマンドを実行すると、以下のような結果が返っ
 #: upstream/_versions/1.11/guides/redis.adoc:455
 #, no-wrap
 msgid "Increment a value given its key"
-msgstr ""
+msgstr "キーが与えられた値をインクリメントします。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:458
@@ -874,7 +874,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:477
 msgid "We see that the value of the `first` key is now `37` which is exactly the result of `10 + 27`, quick maths."
-msgstr ""
+msgstr "`first` キーの値が `37` になっていることがわかりますが、これはまさに簡単な計算である `10 + 27` の結果と同じです。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/redis.adoc:478
